made trunk script for copying css more generic

--- a/front-end/Trunk.toml
+++ b/front-end/Trunk.toml
@@ -9,4 +9,4 @@ command_arguments = ["-c", "cp ./target/stylers/main.css $TRUNK_STAGING_DIR/"]
 #copying global css file into directory
 stage = "post_build"
 command = "sh"
-command_arguments = ["-c", "cp ./style/global.css $TRUNK_STAGING_DIR/"]
+command_arguments = ["-c", "cp ./style/* $TRUNK_STAGING_DIR/"]
